# mgtest

./: .gitattributes  .gitignore  CMakeLists.txt  Camera.cs  Circle.cs  GameModel.cs  GeometryTools.cs  GraphicsObject.cs  Helpers.cs  LineVert.cs  ModelEarth.cs  ModelHelicopter.cs  Program.cs  Readme.md  Scene.cs  Shape.cs  Vec3.cs  mgtest.cs  mgtest.csproj  mgtest.sln
Content/: Content.mgcb
Content/Effects/: Ambient.fx  NightDay.fx  SimpleEffect.fx
Content/Models/: EarthModel.fbx  Helicopter.fbx
Properties/: AssemblyInfo.cs
